# Invoice-Converter

./: .gitignore  .pre-commit-config.yaml  README.md  analysis.json  deprecated_format.csv  deprecated_format_invoice.csv  deprecated_format_line_items.csv  field_recognition.py  invoice_converter.py  invoice_original_analysis.json  invoice_template.toml  layout_analysis.py  pyproject.toml  setup.py  setup.sh  simple-setup.sh  template.csv  text_recognition.py  upd_format.csv  upd_format_invoice.csv  upd_format_line_items.csv
.github/workflows/: publish.yml  test.yml
PNW Open Invoices - unrevised 1_snippets/: page_001_nomatch.txt
PNW Open Invoices - unrevised 80_snippets/: page_001_match.txt  page_002_nomatch.txt
invoice_converter/: __init__.py  __main__.py  field_extraction.py  field_recognition.py  invoice_converter.py  layout_analysis.py  models.py  pdf_manipulation.py  structure_detection.py  template_comparison.py  text_recognition.py
tests/: __init__.py  test_invoice_converter.py  test_template.py
